--- a/imgui.ini
+++ b/imgui.ini
@@ -3,10 +3,11 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1460,95
-Size=550,603
+Pos=1403,229
+Size=550,680
+Collapsed=1
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=539,108
+Pos=60,60
 Size=339,358
 
