--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -2,11 +2,212 @@
 Pos=60,60
 Size=400,400
 
+[Window][Dear ImGui Demo]
+Pos=891,100
+Size=566,673
+
 [Window][Dear ImGui Metrics/Debugger]
-Pos=197,95
+Pos=60,60
 Size=346,358
 
-[Window][Dear ImGui Demo]
-Pos=1444,117
-Size=550,680
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=252,156
+
+[Window][Delete?]
+Pos=804,452
+Size=311,105
+
+[Window][Stacked 1]
+Pos=755,444
+Size=409,172
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,921
+
+[Window][About Dear ImGui]
+Pos=55,62
+Size=570,476
+
+[Window][Example: Console]
+Pos=187,21
+Size=520,600
+
+[Window][Example: Assets Browser]
+Pos=57,61
+Size=800,480
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+
+[Window][Example: Property editor/##tree_73339443]
+IsChild=1
+Size=300,415
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=350,1055
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=451,267
+
+[Window][Same title as another window##1]
+Pos=137,101
+Size=451,61
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=451,61
+Collapsed=1
+
+[Window][###AnimatedTitle]
+Pos=226,282
+Size=247,46
+
+[Window][Example: Simple layout]
+Pos=692,89
+Size=500,439
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,385
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+
+[Window][Example: Custom rendering]
+Pos=1025,180
+Size=623,414
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=354,104
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=515,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Dear ImGui Demo/##Basket_D71F5A4F]
+IsChild=1
+Size=494,260
+
+[Window][Example: Constrained Resize]
+Pos=60,61
+Size=689,387
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0xDDC24BCA,2]
+RefScale=13
+Column 1  Sort=0v
+
+[Table][0xAC9A836A,2]
+RefScale=13
+Column 0  Width=4
+Column 1  Weight=2.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
 
